--- a/src/assets/css/core/screenshot.css
+++ b/src/assets/css/core/screenshot.css
@@ -18,11 +18,11 @@
 }*/
 
 .screenshot-slider {
-    background: rgba(0, 0, 0, 0) url("../../../assest/img/screenshot/screenshot-mobile-mockup.png") no-repeat scroll center center / auto 100%;
+    background: rgba(0, 0, 0, 0) url("/assets/img/screenshot/screenshot-mobile-mockup.png") no-repeat scroll center center / auto 100%;
 }
 
 .screenshot-slider-2 {
-    background: rgba(0, 0, 0, 0) url("../../../assest/img/screenshot/screenshot-mobile-mockup.png") no-repeat scroll right center / auto 100%;
+    background: rgba(0, 0, 0, 0) url("/assets/img/screenshot/screenshot-mobile-mockup.png") no-repeat scroll right center / auto 100%;
 }
 
 /*------------------------
