arreglando slider, un poco

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <div class="welcome-single-slide">
+    <!--<div class="welcome-single-slide">
       <div class="slide-bg-two slide-bg-overlay"></div>
       <div class="welcome-area">
         <div class="container">
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
   </div>
   <!--WELCOME SLIDER AREA END-->
 </header>
